Complete milestone 3A player terminal